Fixed layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,6 @@
 
 
  body {
-    padding-top: 20px;
     padding-bottom: 20px;
  }
  .modalDialog {
